Update 二叉树与递归 - 深入理解.md

--- a/二叉树与递归 - 深入理解.md
+++ b/二叉树与递归 - 深入理解.md
@@ -190,3 +190,44 @@ class Solution {
     }
 }
 ```
+
+## [6.二叉树的垂序遍历](https://leetcode.cn/problems/vertical-order-traversal-of-a-binary-tree/description/)
+思路：灵神的答案1思路。      
+代码：
+```
+class Solution {
+    Map<Integer, List<int[]>> mp = new TreeMap<>();
+
+    public List<List<Integer>> verticalTraversal(TreeNode root) {
+        dfs(root, 0, 0);
+        List<List<Integer>> ans = new ArrayList<>();
+        mp.forEach((k, v) ->{  //遍历Map
+            List<Integer> tmp = new ArrayList<>();
+            v.sort((a, b) -> { //对List进行自定义排序
+                if(a[0] != b[0])
+                    return a[0] - b[0];
+                return a[1] - b[1];
+            });
+            v.forEach(a -> tmp.add(a[1])); //遍历List
+            ans.add(tmp);
+        });
+        return ans;
+    }
+
+    void dfs(TreeNode node, int row, int col)
+    {
+        if(node == null)
+            return;
+        if(mp.containsKey(col))
+            mp.get(col).add(new int[]{row, node.val});
+        else
+        {
+            List<int[]> ls = new ArrayList<>();
+            ls.add(new int[]{row, node.val});
+            mp.put(col, ls);
+        }
+        dfs(node.left, row+1, col-1);
+        dfs(node.right, row+1, col+1);
+    }
+}
+```
