--- a/二叉树与递归 - 灵活运用.md
+++ b/二叉树与递归 - 灵活运用.md
@@ -1,1 +1,16 @@
+# 代表性题目
+
+## [1.相同的树](https://leetcode.cn/problems/same-tree/description/)
+思路：两个树是否相等 = 根节点是否相等 + 左子树是否相等 + 右子树是否相等。      
+代码：
+```
+class Solution {
+    public boolean isSameTree(TreeNode p, TreeNode q) {
+        if(p == null || q == null)
+            return p == q;
+        return p.val == q.val && isSameTree(p.left, q.left)
+                 && isSameTree(p.right, q.right);
+    }
+}
+```
 
