Update 二叉树与递归 - 灵活运用.md

--- a/二叉树与递归 - 灵活运用.md
+++ b/二叉树与递归 - 灵活运用.md
@@ -14,3 +14,20 @@ class Solution {
 }
 ```
 
+## [2.对称二叉树](https://leetcode.cn/problems/symmetric-tree/)
+思路：两个树是否轴对称 = 根节点是否相等 + 左右子树是否轴对称 + 右左子树是否轴对称。      
+代码：
+```
+class Solution {
+    public boolean isSymmetric(TreeNode root) {
+        return func(root.left, root.right);
+    }
+
+    public boolean func(TreeNode p, TreeNode q) //判断两棵树是否镜像对称
+    {
+        if(p == null || q == null)
+            return p == q;
+        return p.val == q.val && func(p.left, q.right) && func(p.right, q.left);
+    }
+}
+```
