Update 二叉树与递归 - 灵活运用.md

--- a/二叉树与递归 - 灵活运用.md
+++ b/二叉树与递归 - 灵活运用.md
@@ -31,3 +31,26 @@ class Solution {
     }
 }
 ```
+
+## [3.平衡二叉树](https://leetcode.cn/problems/balanced-binary-tree/description/)
+思路：求树的深度，如果树是不平衡的，就返回-1。       
+代码：
+```
+class Solution {
+    public boolean isBalanced(TreeNode root) {
+        return height(root) != -1;
+    }
+
+    public int height(TreeNode node)
+    {
+        if(node == null)
+            return 0;
+        int lefth = height(node.left);
+        int righth = height(node.right);
+        if(lefth == -1 || righth == -1 || Math.abs(lefth - righth) > 1)
+            return -1;
+        else
+            return Math.max(lefth, righth) + 1;
+    }
+}
+```
