--- a/二叉树与递归 - 灵活运用.md
+++ b/二叉树与递归 - 灵活运用.md
@@ -54,3 +54,27 @@ class Solution {
     }
 }
 ```
+
+## [4.二叉树的右视图](https://leetcode.cn/problems/binary-tree-right-side-view/description/)
+思路：答案为每一层的最右节点，所以dfs优先递归右子树，如果当前节点深度大于答案的长度，说明该节点是该层的最右节点，加入答案。其实用bfs层序遍历更直观。        
+代码：
+```
+class Solution {
+    List<Integer> ans = new ArrayList<>();
+
+    public List<Integer> rightSideView(TreeNode root) {
+        dfs(root, 1);
+        return ans;
+    }
+
+    public void dfs(TreeNode node, int depth)
+    {
+        if(node == null)
+            return;
+        if(depth > ans.size())
+            ans.add(node.val);
+        dfs(node.right, depth+1);
+        dfs(node.left, depth+1);
+    }
+}
+```
