Update 二叉树与递归 - 灵活运用.md

--- a/二叉树与递归 - 灵活运用.md
+++ b/二叉树与递归 - 灵活运用.md
@@ -56,7 +56,7 @@ class Solution {
 ```
 
 ## [4.二叉树的右视图](https://leetcode.cn/problems/binary-tree-right-side-view/description/)
-思路：答案为每一层的最右节点，所以dfs优先递归右子树，如果当前节点深度大于答案的长度，说明该节点是该层的最右节点，加入答案。其实用bfs层序遍历更直观。        
+思路：答案为每一层的最右节点，所以dfs优先递归右子树，如果当前节点深度大于答案的长度，说明该节点是该层的最右节点，加入答案；否则则相当于被右边的节点挡住了。其实用bfs层序遍历更直观。        
 代码：
 ```
 class Solution {
