Update 二叉树与递归 - 灵活运用.md

--- a/二叉树与递归 - 灵活运用.md
+++ b/二叉树与递归 - 灵活运用.md
@@ -78,3 +78,21 @@ class Solution {
     }
 }
 ```
+
+## [5.翻转二叉树](https://leetcode.cn/problems/invert-binary-tree/description/)
+思路：先翻转左右子树，再对左右子树分别进行翻转。       
+代码：
+```
+class Solution {
+    public TreeNode invertTree(TreeNode root) {
+        if(root == null)
+            return null;
+        TreeNode tmp = root.left;
+        root.left = root.right;
+        root.right = tmp;
+        invertTree(root.left);
+        invertTree(root.right);
+        return root;
+    }
+}
+```
