--- a/二叉树与递归 - 灵活运用.md
+++ b/二叉树与递归 - 灵活运用.md
@@ -96,3 +96,22 @@ class Solution {
     }
 }
 ```
+
+## [6.合并二叉树](https://leetcode.cn/problems/merge-two-binary-trees/description/)
+思路：看代码。       
+代码：
+```
+class Solution {
+    public TreeNode mergeTrees(TreeNode root1, TreeNode root2) {
+        if(root1 == null && root2 == null)
+            return null;
+        if(root1 == null)
+            return root2;
+        else if(root2 == null)
+            return root1;
+        else
+            return new TreeNode(root1.val + root2.val, mergeTrees(root1.left, root2.left), 
+                                    mergeTrees(root1.right, root2.right));
+    }
+}
+```
