Update 二叉树与递归 - 灵活运用.md

--- a/二叉树与递归 - 灵活运用.md
+++ b/二叉树与递归 - 灵活运用.md
@@ -115,3 +115,24 @@ class Solution {
     }
 }
 ```
+
+## [7.节点与其祖先之间的最大差值](https://leetcode.cn/problems/maximum-difference-between-node-and-ancestor/description/)
+思路：看代码注释。       
+代码：
+```
+class Solution {
+    public int maxAncestorDiff(TreeNode root) {
+        return dfs(root, root.val, root.val);
+    }
+
+    public int dfs(TreeNode node, int max, int min)
+    {
+        if(node == null)
+            return 0;
+        int val = Math.max(Math.abs(node.val - min), Math.abs(node.val - max));//计算当前节点和祖先的最大差值
+        int vall = dfs(node.left, Math.max(node.val, max), Math.min(node.val, min)); //计算左子树节点和祖先的最大差值
+        int valr = dfs(node.right, Math.max(node.val, max), Math.min(node.val, min)); //计算右子树节点和祖先的最大差值
+        return Math.max(Math.max(vall, valr), val); //返回三个值的最大值，即当前树的最大差值。
+    }
+}
+```
