Update 二叉树与递归 - 灵活运用.md

--- a/二叉树与递归 - 灵活运用.md
+++ b/二叉树与递归 - 灵活运用.md
@@ -136,3 +136,29 @@ class Solution {
     }
 }
 ```
+
+## [8.根到叶路径上的不足节点](https://leetcode.cn/problems/insufficient-nodes-in-root-to-leaf-paths/description/)
+思路：记得读懂题意。思路和[路径总和](https://leetcode.cn/problems/path-sum/description/)类似。如果通过该节点的两个 “根-叶” 路径都返回false，说明该节点为不足节点，需要删掉，所以继续向上返回false。       
+代码：
+```
+class Solution {
+    public TreeNode sufficientSubset(TreeNode root, int limit) {
+        return dfs(root, limit)? root : null;
+    }
+
+    public boolean dfs(TreeNode node, int limit)
+    {
+        if(node == null)
+            return false;
+        if(node.left == null && node.right == null)
+            return node.val >= limit;
+        boolean l = dfs(node.left, limit - node.val);
+        boolean r = dfs(node.right, limit - node.val);
+        if(!l)
+            node.left = null;
+        if(!r)
+            node.right = null;
+        return l || r;
+    }
+}
+```
