Update 二叉树与递归 - 深入理解.md

--- a/二叉树与递归 - 深入理解.md
+++ b/二叉树与递归 - 深入理解.md
@@ -218,14 +218,7 @@ class Solution {
     {
         if(node == null)
             return;
-        if(mp.containsKey(col))
-            mp.get(col).add(new int[]{row, node.val});
-        else
-        {
-            List<int[]> ls = new ArrayList<>();
-            ls.add(new int[]{row, node.val});
-            mp.put(col, ls);
-        }
+        mp.computeIfAbsent(col, k -> new ArrayList<>()).add(new int[]{row, node.val});
         dfs(node.left, row+1, col-1);
         dfs(node.right, row+1, col+1);
     }
