--- a/二叉树与递归 - 深入理解.md
+++ b/二叉树与递归 - 深入理解.md
@@ -224,3 +224,7 @@ class Solution {
     }
 }
 ```
+
+
+### 注意事项
+HashMap的computeIfAbsent(K key, Function remappingFunction)方法的语法为:如果 key 对应的 value 不存在，则使用获取 remappingFunction 重新计算后的值，并保存为该 key 的 value，否则返回 value。
