Update 二叉树与递归 - 前序中序后序.md

--- a/二叉树与递归 - 前序中序后序.md
+++ b/二叉树与递归 - 前序中序后序.md
@@ -21,3 +21,21 @@ class Solution {
     }
 }
 ```
+
+### 方法二（中序遍历）
+思路：如果树是一个二叉搜索树,则中序遍历得到的序列是递增的。可以维护一个值pre,用于记录上一个节点的值.    
+代码：
+```
+class Solution {
+    public long pre = Long.MIN_VALUE;
+
+    public boolean isValidBST(TreeNode root) {
+        if(root == null)
+            return true;
+        if(!isValidBST(root.left) || root.val <= pre)
+            return false;
+        pre = root.val;
+        return isValidBST(root.right);
+    }
+}
+```
