Update 二叉树与递归 - 前序中序后序.md

--- a/二叉树与递归 - 前序中序后序.md
+++ b/二叉树与递归 - 前序中序后序.md
@@ -39,3 +39,26 @@ class Solution {
     }
 }
 ```
+
+### 方法三（后序遍历）
+思路：每次返回左右子树的最大最小值区间,判断当前节点值是否符合条件.     
+代码：
+```
+class Solution {
+    public boolean isValidBST(TreeNode root) {
+        return dfs(root)[0] != Long.MIN_VALUE;
+    }
+
+    public long[] dfs(TreeNode node) //返回该子树的最小值和最大值,闭区间
+    {
+        if(node == null)
+            return new long[]{Long.MAX_VALUE, Long.MIN_VALUE};;
+        long[] ltree = dfs(node.left);
+        long[] rtree = dfs(node.right);
+        if(node.val <= ltree[1] || node.val >= rtree[0])
+            return new long[]{Long.MIN_VALUE, Long.MAX_VALUE};
+        return new long[]{Math.min(ltree[0], node.val), 
+            Math.max(rtree[1], node.val)}; //max和min只在叶子节点有用
+    }
+}
+```
