Update 二叉树与递归 - 前序中序后序.md

--- a/二叉树与递归 - 前序中序后序.md
+++ b/二叉树与递归 - 前序中序后序.md
@@ -62,3 +62,22 @@ class Solution {
     }
 }
 ```
+
+
+## [2.二叉搜索树的范围和](https://leetcode.cn/problems/range-sum-of-bst/description/)
+思路：前序遍历 + 利用二叉搜索树性质剪枝。      
+代码：
+```
+class Solution {
+    public int rangeSumBST(TreeNode root, int low, int high) {
+        if(root == null)
+            return 0;
+        if(root.val < low) 
+            return rangeSumBST(root.right, low, high);
+        if(root.val > high)
+            return rangeSumBST(root.left, low, high);
+        return root.val + rangeSumBST(root.left, low, high)
+                 + rangeSumBST(root.right, low, high);
+    }
+}
+```
