Update 二叉树与递归 - 前序中序后序.md

--- a/二叉树与递归 - 前序中序后序.md
+++ b/二叉树与递归 - 前序中序后序.md
@@ -81,3 +81,53 @@ class Solution {
     }
 }
 ```
+
+## [3.二叉搜索树最近节点查询](https://leetcode.cn/problems/closest-nodes-queries-in-a-binary-search-tree/description/)
+思路：中序遍历 + 二分查找。      
+代码：
+```
+class Solution {
+    public List<Integer> ls = new ArrayList<>();
+
+    public List<List<Integer>> closestNodes(TreeNode root, List<Integer> queries) {
+        midDfs(root);
+        List<List<Integer>> ans = new ArrayList<>();
+        queries.forEach(q -> {
+            int j = lower_bound(ls, q);
+            int max1 = j == ls.size()? -1 : ls.get(j);
+            int min1;
+            if(j == ls.size() || ls.get(j) > q)
+                j--;
+            min1 = j < 0? - 1 : ls.get(j);
+            ans.add(List.of(min1, max1));
+        });
+        return ans;
+    }
+
+    //中序遍历
+    void midDfs(TreeNode node)
+    {
+        if(node == null)
+            return;
+        midDfs(node.left);
+        ls.add(node.val);
+        midDfs(node.right);
+    }
+
+    //二分查找
+    int lower_bound(List<Integer> nums, int target)
+    {
+        int l = 0;
+        int r = nums.size() - 1;
+        while(l <= r)
+        {
+            int mid = l + (r - l) / 2;
+            if(nums.get(mid) < target)
+                l = mid + 1;
+            else
+                r = mid - 1;
+        }
+        return l;
+    }
+}
+```
