--- a/二叉树与递归 - 前序中序后序.md
+++ b/二叉树与递归 - 前序中序后序.md
@@ -131,3 +131,22 @@ class Solution {
     }
 }
 ```
+
+## [4.二叉搜索树中第 K 小的元素](https://leetcode.cn/problems/kth-smallest-element-in-a-bst/description/)
+思路：中序遍历，见代码注释。      
+代码：
+```
+class Solution {
+    public int n = 0;
+
+    public int kthSmallest(TreeNode root, int k) {
+        if(root == null)
+            return -1;
+        int l = kthSmallest(root.left, k); //查找左子树
+        if(l != -1) return l;  //若已经找到则直接返回。
+        n = n + 1;
+        if(n == k) return root.val; //若当前节点满足则直接返回
+        return kthSmallest(root.right, k); //答案在右子树
+    }
+}
+```
