Update 二叉树与递归 - 前序中序后序.md

--- a/二叉树与递归 - 前序中序后序.md
+++ b/二叉树与递归 - 前序中序后序.md
@@ -1,5 +1,8 @@
 # 代表性题目
 
+## 注意事项
+1. 一般下层要用到的信息就是通过参数传递，上层要用到的信息则是通过返回值。  
+
 ## [1.验证二叉搜索树](https://leetcode.cn/problems/validate-binary-search-tree/)
 
 ### 方法一（前序遍历）
