Update 二叉树与递归 - 前序中序后序.md

--- a/二叉树与递归 - 前序中序后序.md
+++ b/二叉树与递归 - 前序中序后序.md
@@ -1,7 +1,8 @@
 # 代表性题目
 
 ## 注意事项
-1. 一般下层要用到的信息就是通过参数传递，上层要用到的信息则是通过返回值。  
+1. 一般下层要用到的信息就是通过参数传递，上层要用到的信息则是通过返回值。
+2. 如果答案需要遍历所有节点，则不能使用剪枝。反之如果提前知道答案，则可以使用剪枝提前返回。（第一题的前序遍历和中中序遍历其实都是用了剪枝，而后序遍历则因为一定得递归调用左右子树后才返回当前节点，所以不存在什么剪枝操作）。    
 
 ## [1.验证二叉搜索树](https://leetcode.cn/problems/validate-binary-search-tree/)
 
