Update 二叉树与递归 - 前序中序后序.md

--- a/二叉树与递归 - 前序中序后序.md
+++ b/二叉树与递归 - 前序中序后序.md
@@ -154,3 +154,31 @@ class Solution {
     }
 }
 ```
+
+## [5.二叉搜索子树的最大键值和](https://leetcode.cn/problems/maximum-sum-bst-in-binary-tree/description/)
+思路：使用第一题的后序遍历做法，返回该子树的最小值和最大值（闭区间）,以及该子树的和。      
+代码：
+```
+class Solution {
+    public int maxsum = Integer.MIN_VALUE;
+
+    public int maxSumBST(TreeNode root) {
+        dfs(root);
+        return maxsum < 0? 0 : maxsum;//所有节点键值都为负数，和最大的二叉搜索树为空
+    }
+
+    public int[] dfs(TreeNode node) //返回该子树的最小值和最大值,闭区间,以及该子树的和
+    {
+        if(node == null)
+            return new int[]{Integer.MAX_VALUE, Integer.MIN_VALUE, 0};;
+        int[] ltree = dfs(node.left);
+        int[] rtree = dfs(node.right);
+        if(node.val <= ltree[1] || node.val >= rtree[0])
+            return new int[]{Integer.MIN_VALUE, Integer.MAX_VALUE, 0};//随便返回一个和值
+        int sum = ltree[2] + rtree[2] + node.val;
+        maxsum = Math.max(sum, maxsum);
+        return new int[]{Math.min(ltree[0], node.val), 
+            Math.max(rtree[1], node.val), sum}; //max和min只在叶子节点有用
+    }
+}
+```
