Update 二叉树与递归 - 前序中序后序.md

--- a/二叉树与递归 - 前序中序后序.md
+++ b/二叉树与递归 - 前序中序后序.md
@@ -182,3 +182,36 @@ class Solution {
     }
 }
 ```
+
+## [6.从前序与中序遍历序列构造二叉树](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-inorder-traversal/description/)
+思路：前序序列：[ 根节点, [左子树的前序遍历结果], [右子树的前序遍历结果] ]， 中序遍历：[ [左子树的中序遍历结果], 根节点, [右子树的中序遍历结果] ]。      
+代码：
+```
+class Solution {
+    public TreeNode buildTree(int[] preorder, int[] inorder) {
+        return build(preorder, inorder, 0, preorder.length-1, 0, inorder.length-1);
+    }
+
+    public TreeNode build(int[] preorder, int[] inorder, int prel, int prer,
+    int inl, int inr)
+    {
+        if(prel > prer)
+            return null;
+        // if(prel == prer)
+        //     return new TreeNode(preorder[prel], null, null);
+        int mid = find(inorder, preorder[prel], inl, inr);//从中序序列查找子树根节点下标
+        int lnum = mid - inl; //根据中序序列计算左子树节点数
+        int rnum = inr - mid; //根据中序序列计算右子树节点数
+        return new TreeNode(preorder[prel], 
+                    build(preorder, inorder, prel+1, prel+lnum, inl, mid-1),
+                    build(preorder, inorder, prel+lnum+1, prer, mid+1, inr));
+    }
+
+    public int find(int[] nums, int x, int inl, int inr) //可以用哈希表优化时间
+    {
+        for(int i = inl; i <= inr; i++)
+            if(nums[i] == x) return i;
+        return -1;
+    }
+}
+```
