Update 二叉树与递归 - 前序中序后序.md

--- a/二叉树与递归 - 前序中序后序.md
+++ b/二叉树与递归 - 前序中序后序.md
@@ -184,7 +184,7 @@ class Solution {
 ```
 
 ## [6.从前序与中序遍历序列构造二叉树](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-inorder-traversal/description/)
-思路：前序序列：[ 根节点, [左子树的前序遍历结果], [右子树的前序遍历结果] ]， 中序遍历：[ [左子树的中序遍历结果], 根节点, [右子树的中序遍历结果] ]。      
+思路：前序序列：[ 根节点, [左子树的前序遍历结果], [右子树的前序遍历结果] ]， 中序序列：[ [左子树的中序遍历结果], 根节点, [右子树的中序遍历结果] ]。      
 代码：
 ```
 class Solution {
@@ -208,6 +208,37 @@ class Solution {
     }
 
     public int find(int[] nums, int x, int inl, int inr) //可以用哈希表优化时间
+    {
+        for(int i = inl; i <= inr; i++)
+            if(nums[i] == x) return i;
+        return -1;
+    }
+}
+```
+
+## [7.从中序与后序遍历序列构造二叉树](https://leetcode.cn/problems/construct-binary-tree-from-inorder-and-postorder-traversal/description/)
+思路：后序序列：[ [左子树的前序遍历结果], [右子树的前序遍历结果], 根节点 ]， 中序序列：[ [左子树的中序遍历结果], 根节点, [右子树的中序遍历结果] ]。      
+代码：
+```
+class Solution {
+    public TreeNode buildTree(int[] inorder, int[] postorder) {
+        return build(inorder, postorder, 0, inorder.length-1, 0, postorder.length-1);
+    }
+
+    public TreeNode build(int[] inorder, int[] postorder, int inl, int inr, int postl, int postr)
+    {
+        if(postl > postr)
+            return null;
+        int mid = find(inorder, postorder[postr], inl, inr);
+        int lnum = mid - inl;
+        int rnum = inr - mid;
+        return new TreeNode(postorder[postr], 
+                    build(inorder, postorder, inl, mid-1, postl, postl+lnum-1),
+                    build(inorder, postorder, mid+1, inr, postr-rnum, postr-1));
+    }
+
+
+    public int find(int[] nums, int x, int inl, int inr)
     {
         for(int i = inl; i <= inr; i++)
             if(nums[i] == x) return i;
