Update 二叉树与递归 - 前序中序后序.md

--- a/二叉树与递归 - 前序中序后序.md
+++ b/二叉树与递归 - 前序中序后序.md
@@ -217,7 +217,7 @@ class Solution {
 ```
 
 ## [7.从中序与后序遍历序列构造二叉树](https://leetcode.cn/problems/construct-binary-tree-from-inorder-and-postorder-traversal/description/)
-思路：后序序列：[ [左子树的前序遍历结果], [右子树的前序遍历结果], 根节点 ]， 中序序列：[ [左子树的中序遍历结果], 根节点, [右子树的中序遍历结果] ]。      
+思路：后序序列：[ [左子树的后序遍历结果], [右子树的后序遍历结果], 根节点 ]， 中序序列：[ [左子树的中序遍历结果], 根节点, [右子树的中序遍历结果] ]。      
 代码：
 ```
 class Solution {
@@ -241,6 +241,38 @@ class Solution {
     public int find(int[] nums, int x, int inl, int inr)
     {
         for(int i = inl; i <= inr; i++)
+            if(nums[i] == x) return i;
+        return -1;
+    }
+}
+```
+
+## [8.从中序与后序遍历序列构造二叉树](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-postorder-traversal/description/)
+思路：前序序列：[ 根节点, [左子树的前序遍历结果], [右子树的前序遍历结果] ]， 后序序列：[ [左子树的后序遍历结果], [右子树的后序遍历结果], 根节点 ]。如果只知道前序遍历和后序遍历，这棵二叉树不一定是唯一的。那么不妨规定：无论什么情况，在前序遍历中，preorder的第二个元素preorder[1]都是左子树的根节点值。根据定义，preorder[1]在后序序列中的下标则是后序序列中[左子树的后序遍历结果]的最后一个元素，即可确定左子树的节点数。        
+代码：
+```
+class Solution {
+    public TreeNode constructFromPrePost(int[] preorder, int[] postorder) {
+        return build(preorder, postorder, 0, preorder.length-1, 0, postorder.length-1);
+    }
+
+    public TreeNode build(int[] preorder, int[] postorder, int prel, int prer, int postl, int postr)
+    {
+        if(prel > prer)
+            return null;
+        if(prel == prer) //叶子节点(不然下一行无法获取左子树根节点)
+            return new TreeNode(preorder[prel]);
+        int t = find(postorder, preorder[prel+1], postl, postr); //找到左子树根节点在后序序列中的下标，即可知道左子树节点数
+        int lnum = t - postl + 1;//二叉树左子树节点数
+        int rnum = prer - prel - lnum;//二叉树右子树节点数
+        return new TreeNode(preorder[prel],
+                    build(preorder, postorder, prel+1, prel+lnum, postl, postl+lnum-1),
+                    build(preorder, postorder, prer-rnum+1, prer, postr-rnum, postr-1));
+    }
+
+    public int find(int[] nums, int x, int postl, int postr)
+    {
+        for(int i = postl; i <= postr; i++)
             if(nums[i] == x) return i;
         return -1;
     }
