Update 二叉树与递归 - 前序中序后序.md

--- a/二叉树与递归 - 前序中序后序.md
+++ b/二叉树与递归 - 前序中序后序.md
@@ -247,7 +247,7 @@ class Solution {
 }
 ```
 
-## [8.从中序与后序遍历序列构造二叉树](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-postorder-traversal/description/)
+## [8.根据前序和后序遍历构造二叉树](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-postorder-traversal/description/)
 思路：前序序列：[ 根节点, [左子树的前序遍历结果], [右子树的前序遍历结果] ]， 后序序列：[ [左子树的后序遍历结果], [右子树的后序遍历结果], 根节点 ]。如果只知道前序遍历和后序遍历，这棵二叉树不一定是唯一的。那么不妨规定：无论什么情况，在前序遍历中，preorder的第二个元素preorder[1]都是左子树的根节点值。根据定义，preorder[1]在后序序列中的下标则是后序序列中[左子树的后序遍历结果]的最后一个元素，即可确定左子树的节点数。        
 代码：
 ```
