Update 二叉树与递归 - 前序中序后序.md

--- a/二叉树与递归 - 前序中序后序.md
+++ b/二叉树与递归 - 前序中序后序.md
@@ -278,3 +278,41 @@ class Solution {
     }
 }
 ```
+
+## [9.删点成林](https://leetcode.cn/problems/delete-nodes-and-return-forest/description/)
+思路：后序遍历，每次返回当前节点或者删除后的null。      
+代码：
+```
+class Solution {
+    public List<TreeNode> ans = new ArrayList<>();
+
+    public List<TreeNode> delNodes(TreeNode root, int[] to_delete) {
+        if(postDfs(root, to_delete) != null)
+            ans.add(root);
+        return ans;
+    }
+
+    public TreeNode postDfs(TreeNode node, int[] to_delete)
+    {
+        if(node == null)
+            return null;
+        node.left = postDfs(node.left, to_delete);
+        node.right = postDfs(node.right, to_delete);
+        if(!contain(to_delete, node.val)) //不需要删除该节点
+            return node;
+        //需要删除该节点
+        if(node.left != null)
+            ans.add(node.left);
+        if(node.right != null)
+            ans.add(node.right);
+        return null;
+    }
+
+    public boolean contain(int[] to_delete, int x) //可以用哈希表优化
+    {
+        for(int i = 0; i < to_delete.length; i++)
+            if(to_delete[i] == x) return true;
+        return false;
+    }
+}
+```
