--- a/二叉树与递归 - 最近公共祖先.md
+++ b/二叉树与递归 - 最近公共祖先.md
@@ -1,1 +1,30 @@
+# 代表性题目
 
+## [1.二叉树的最近公共祖先](https://leetcode.cn/problems/lowest-common-ancestor-of-a-binary-tree/)
+思路：两个树是否相等 = 根节点是否相等 + 左子树是否相等 + 右子树是否相等。      
+代码：![image](https://github.com/user-attachments/assets/673ddc41-6755-4dc7-b9ef-b505546b984a)
+![image](https://github.com/user-attachments/assets/3f405ffc-df86-46cc-98b5-1c33a2f7199e)
+
+  
+```
+class Solution {
+    public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
+        if(root == null)
+            return null;
+        if(root == p || root == q)
+            return root;
+        //首先dfs递归找到p，q节点并返回
+        TreeNode ltree = lowestCommonAncestor(root.left, p, q); 
+        TreeNode rtree = lowestCommonAncestor(root.right, p, q);
+        //分类讨论返回值
+        if(ltree != null && rtree != null)// 左右都找到
+            return root; // 当前节点是最近公共祖先
+        else if(ltree == null && rtree == null)
+            return null;
+        else if(ltree == null)
+            return rtree;
+        else    
+            return ltree;
+    }
+}
+```
