Update 二叉树与递归 - 最近公共祖先.md

--- a/二叉树与递归 - 最近公共祖先.md
+++ b/二叉树与递归 - 最近公共祖先.md
@@ -1,11 +1,10 @@
 # 代表性题目
 
 ## [1.二叉树的最近公共祖先](https://leetcode.cn/problems/lowest-common-ancestor-of-a-binary-tree/)
-思路：两个树是否相等 = 根节点是否相等 + 左子树是否相等 + 右子树是否相等。      
-代码：![image](https://github.com/user-attachments/assets/673ddc41-6755-4dc7-b9ef-b505546b984a)
+思路：![image](https://github.com/user-attachments/assets/673ddc41-6755-4dc7-b9ef-b505546b984a)
 ![image](https://github.com/user-attachments/assets/3f405ffc-df86-46cc-98b5-1c33a2f7199e)
 
-  
+代码：
 ```
 class Solution {
     public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
