--- a/二叉树与递归 - 最近公共祖先.md
+++ b/二叉树与递归 - 最近公共祖先.md
@@ -27,3 +27,26 @@ class Solution {
     }
 }
 ```
+
+## [2.二叉搜索树的最近公共祖先](https://leetcode.cn/problems/lowest-common-ancestor-of-a-binary-search-tree/description/)
+思路：![image](https://github.com/user-attachments/assets/cc4c7a44-a16b-4d6a-adc6-74276b75d567)
+
+代码
+```
+class Solution {
+    public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
+        return p.val > q.val? dfs(root, q, p) : dfs(root, p, q);
+    }
+
+    public TreeNode dfs(TreeNode root, TreeNode p, TreeNode q) {//确保p值小于q值
+        if(root == null)
+            return null;
+        if(root.val >= p.val && root.val <= q.val)
+            return root;
+        else if(root.val < p.val)
+            return dfs(root.right, p, q);
+        else
+            return dfs(root.left, p, q);
+    }
+}
+```
