--- a/二叉树与递归 - 最近公共祖先.md
+++ b/二叉树与递归 - 最近公共祖先.md
@@ -35,18 +35,12 @@ class Solution {
 ```
 class Solution {
     public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
-        return p.val > q.val? dfs(root, q, p) : dfs(root, p, q);
-    }
-
-    public TreeNode dfs(TreeNode root, TreeNode p, TreeNode q) {//确保p值小于q值
-        if(root == null)
-            return null;
-        if(root.val >= p.val && root.val <= q.val)
-            return root;
-        else if(root.val < p.val)
-            return dfs(root.right, p, q);
-        else
-            return dfs(root.left, p, q);
+        int val = root.val;
+        if(val > p.val && val > q.val)
+            return lowestCommonAncestor(root.left, p, q);
+        if(val < p.val && val < q.val)
+            return lowestCommonAncestor(root.right, p, q);
+        return root; 
     }
 }
 ```
