Update 二叉树与递归 - 最近公共祖先.md

--- a/二叉树与递归 - 最近公共祖先.md
+++ b/二叉树与递归 - 最近公共祖先.md
@@ -44,3 +44,34 @@ class Solution {
     }
 }
 ```
+
+## [3.最深叶节点的最近公共祖先](https://leetcode.cn/problems/lowest-common-ancestor-of-deepest-leaves/description/)
+思路：![image](https://github.com/user-attachments/assets/5e873dd7-4f22-41fa-ae4c-d1d65cf28794)
+
+
+代码
+```
+class Solution {
+    public int maxDepth = -1;
+    public TreeNode ans;
+
+    public TreeNode lcaDeepestLeaves(TreeNode root) {
+        dfs(root, 0);
+        return ans;
+    }
+
+    public int dfs(TreeNode node, int depth)
+    {
+        if(node == null)
+        {
+            maxDepth = Math.max(maxDepth, depth);//更新最大深度
+            return depth;
+        }
+        int ldep = dfs(node.left, depth+1);//返回左子树的最大深度
+        int rdep = dfs(node.right, depth+1);//返回右子树的最大深度
+        if(ldep == maxDepth && rdep == maxDepth)//若左右最大深度一样且等于最大深度
+            ans = node; //可能为答案
+        return Math.max(ldep, rdep);
+    }
+}
+```
