--- a/回溯 - 子集型.md
+++ b/回溯 - 子集型.md
@@ -1,3 +1,40 @@
 # 代表性题目
 
+## [1.电话号码的字母组合](https://leetcode.cn/problems/letter-combinations-of-a-phone-number/description/)
+思路：经典dfs题目。用char[]替代String可以显著提升时间。     
+代码：
+```
+class Solution {
+    Map<Character, String> mp = new HashMap<>();
+    List<String> ans = new  ArrayList<>();
 
+    public List<String> letterCombinations(String digits) {
+        mp.put('2', "abc");
+        mp.put('3', "def");
+        mp.put('4', "ghi");
+        mp.put('5', "jkl");
+        mp.put('6', "mno");
+        mp.put('7', "pqrs");
+        mp.put('8', "tuv");
+        mp.put('9', "wxyz");
+        char[] str = new char[digits.length()];
+        if(!digits.equals("")) dfs(str, 0, digits);
+        return ans;
+    }
+
+    public void dfs(char[] str, int i, String digits)
+    {
+        if(i == digits.length())
+        {
+            ans.add(new String(str));
+            return;
+        }
+        char[] layer = mp.get(digits.charAt(i)).toCharArray();
+        for(char c : layer)
+        {
+            str[i] = c;
+            dfs(str, i + 1, digits);
+        }
+    }
+}
+```
