Update 回溯 - 子集型.md

--- a/回溯 - 子集型.md
+++ b/回溯 - 子集型.md
@@ -38,3 +38,32 @@ class Solution {
     }
 }
 ```
+
+## [2.子集](https://leetcode.cn/problems/subsets/description/)
+思路：子集型，每个元素可选可不选。     
+代码：
+```
+class Solution {
+    List<List<Integer>> ans = new ArrayList<>();
+
+    public List<List<Integer>> subsets(int[] nums) {
+        dfs(new ArrayList<>(), 0, nums);
+        return ans;
+    }
+
+    public void dfs(List<Integer> arr, int i, int[] nums)
+    {
+        if(i == nums.length)
+        {
+            ans.add(new ArrayList<>(arr)); //记得复制，不然得到错误答案！！
+            return;
+        }
+        //不选第i个元素
+        dfs(arr, i+1, nums);
+        //选第i个元素
+        arr.add(nums[i]);
+        dfs(arr, i+1, nums);
+        arr.remove(arr.size()-1); //回溯
+    }
+}
+```
