--- a/回溯 - 子集型.md
+++ b/回溯 - 子集型.md
@@ -40,7 +40,7 @@ class Solution {
 ```
 
 ## [2.子集](https://leetcode.cn/problems/subsets/description/)
-思路：子集型，每个元素可选可不选。     
+思路：子集型，每个元素可选可不选，需要回溯。     
 代码：
 ```
 class Solution {
