Update 回溯 - 子集型.md

--- a/回溯 - 子集型.md
+++ b/回溯 - 子集型.md
@@ -67,3 +67,58 @@ class Solution {
     }
 }
 ```
+
+## [3.分割回文串](https://leetcode.cn/problems/palindrome-partitioning/description/)
+思路：假设每对相邻字符之间有个逗号，那么就看每个逗号是选还是不选。     
+代码：
+```
+class Solution {
+    List<List<String>> ans = new ArrayList<>();
+
+    public List<List<String>> partition(String s) {
+        dfs(new ArrayList<>(), 0, 0, s);
+        return ans;
+    }
+
+    void dfs(List<String> path, int start, int i, String s)
+    {
+        if(i == s.length() - 1) //最后一个索引一定得切割
+        {
+            String fstr = s.substring(start, i+1);
+            if(huiwen(fstr)) 
+            {
+                path.add(fstr);
+                ans.add(new ArrayList<>(path)); //记得拷贝
+                path.remove(path.size()-1);//回溯
+            }
+            return;
+        }
+        //索引i切割（子串包含索引i字符）(也可以看作相邻字符间的逗号)
+        String str = s.substring(start, i+1);
+        if(huiwen(str)) //若不符合，则剪枝
+        {
+            path.add(str);
+            dfs(path, i+1, i+1, s);
+            path.remove(path.size()-1);//回溯
+        }
+        //索引i不切割
+        dfs(path, start, i+1, s);
+    }
+
+    //判断子串是否为都为回文串
+    public boolean huiwen(String s)
+    {
+        char[] subs = s.toCharArray();
+        int l = 0;
+        int r = subs.length - 1;
+        while(l <= r)
+        {
+            if(subs[l] != subs[r])
+                return false;
+            l++;
+            r--;
+        }
+        return true;
+    }
+}
+```
