Update and rename 回溯 - 子集型.md to 回溯 .md

--- a/回溯 .md
+++ b/回溯 .md
@@ -1,4 +1,4 @@
-# 代表性题目
+# 代表性题目- 子集型
 
 ## [1.电话号码的字母组合](https://leetcode.cn/problems/letter-combinations-of-a-phone-number/description/)
 思路：经典dfs题目。用char[]替代String可以显著提升时间。     
@@ -119,6 +119,45 @@ class Solution {
             r--;
         }
         return true;
+    }
+}
+```
+
+# 代表性题目- 组合型与剪枝
+
+## [1.组合](https://leetcode.cn/problems/combinations/description/)
+思路：和上面第二题类似，选或者不选，多了剪枝判断。     
+代码：
+```
+class Solution {
+    int n;
+    int k;
+    List<List<Integer>> ans = new ArrayList<>();
+
+    public List<List<Integer>> combine(int n, int k) {
+        this.n = n;
+        this.k = k;
+        dfs(new ArrayList<>(), 1);
+        return ans;
+    }
+
+    public void dfs(List<Integer> path, int i)
+    {
+        if(path.size() == k) //达到要求，剪枝
+        {
+            ans.add(new ArrayList<>(path));
+            return;
+        }
+        if(k - path.size() > n - i + 1) //剩下的数全选仍然达不到k个数的组合，剪枝
+        {
+            return;
+        }
+        //选
+        path.add(i);
+        dfs(path, i+1);
+        path.remove(path.size() - 1); //回溯
+        //不选
+        dfs(path, i+1);
     }
 }
 ```
