--- a/回溯 .md
+++ b/回溯 .md
@@ -126,7 +126,7 @@ class Solution {
 # 代表性题目- 组合型与剪枝
 
 ## [1.组合](https://leetcode.cn/problems/combinations/description/)
-思路：和上面第二题类似，选或者不选，多了剪枝判断。     
+思路：和上面第二题类似，选或者不选，多了一个剪枝判断。     
 代码：
 ```
 class Solution {
@@ -143,7 +143,7 @@ class Solution {
 
     public void dfs(List<Integer> path, int i)
     {
-        if(path.size() == k) //达到要求，剪枝
+        if(path.size() == k) //达到要求
         {
             ans.add(new ArrayList<>(path));
             return;
