--- a/回溯 .md
+++ b/回溯 .md
@@ -126,7 +126,7 @@ class Solution {
 # 代表性题目- 组合型与剪枝
 
 ## [1.组合](https://leetcode.cn/problems/combinations/description/)
-思路：和上面第二题类似，选或者不选，多了一个剪枝判断。     
+思路：和上面专题第二题类似，选或者不选，多了一个剪枝判断。     
 代码：
 ```
 class Solution {
@@ -158,6 +158,47 @@ class Solution {
         path.remove(path.size() - 1); //回溯
         //不选
         dfs(path, i+1);
+    }
+}
+```
+
+## [2.组合总和 III](https://leetcode.cn/problems/combination-sum-iii/)
+思路：用上一题的代码也可以通过，但可以再多加两个剪枝，见代码注释。     
+代码：
+```
+class Solution {
+    List<List<Integer>> ans = new ArrayList<>();
+    int k;
+    int n;
+
+    public List<List<Integer>> combinationSum3(int k, int n) {
+        this.k = k;
+        this.n = n;
+        dfs(new ArrayList<>(), 1, 0);
+        return ans;
+    }
+
+    public void dfs(List<Integer> path, int i, int sum)
+    {
+        if(path.size() == k) //达到要求
+        {
+            if(sum == n)
+                ans.add(new ArrayList<>(path));
+            return;
+        }
+        if(k - path.size() >  9 - i + 1) //剩余的数全选都达不到k个数的组合，剪枝1
+            return;
+        if(sum >= n) //和已经超过要求了，剪枝2
+            return;
+        int re = k - path.size(); //还需选re个数
+        if(sum + (9 + 9 - re + 1) * re / 2 < n) //选re个最大的值，和仍然达不到n，剪枝3
+            return;
+        //选
+        path.add(i);
+        dfs(path, i + 1, sum + i);
+        path.remove(path.size() - 1);
+        //不选
+        dfs(path, i + 1, sum);
     }
 }
 ```
