--- a/回溯 .md
+++ b/回溯 .md
@@ -202,3 +202,38 @@ class Solution {
     }
 }
 ```
+
+## [3.括号生成](https://leetcode.cn/problems/generate-parentheses/description/)
+思路：答案固定为一个长度2*n的字符串，对于每个位置i，选左括号还是不选左括号（=选右括号）。当左括号数目小于n，则可以选左括号；当右括号数目小于左括号，则可以选右括号；       
+代码：
+```
+class Solution {
+    List<String> ans = new ArrayList<>();
+    int n;
+
+    public List<String> generateParenthesis(int n) {
+        this.n = n;
+        dfs(new char[2 * n], 0, 0);
+        return ans;
+    }
+
+    public void dfs(char[] str, int i, int left) //i表示当前已经选的括号数，left表示已经选的左括号数
+    {
+        if(i == n * 2)
+        {
+            ans.add(new String(str));
+            return;
+        }
+        if(left < n) //左括号数目小于n，选左括号
+        {
+            str[i] = '(';
+            dfs(str, i + 1, left + 1);
+        }
+        if(i - left < left) //当前右括号数目小于左括号数目，不选左括号（选右括号）
+        {
+            str[i] = ')';
+            dfs(str, i + 1, left);
+        }
+    }
+}
+```
