--- a/回溯 .md
+++ b/回溯 .md
@@ -237,3 +237,45 @@ class Solution {
     }
 }
 ```
+
+## [4.组合总和](https://leetcode.cn/problems/combination-sum/description/)
+思路：见代码注释。       
+代码：
+```
+class Solution {
+    List<List<Integer>> ans = new ArrayList<>();
+    int target;
+    int[] candidates;
+
+    public List<List<Integer>> combinationSum(int[] candidates, int target) {
+        this.target = target;
+        this.candidates = candidates;
+        dfs(new ArrayList<>(), 0, 0);
+        return ans;
+    }
+
+    public void dfs(List<Integer> path, int i, int sum)
+    {
+        if(sum == target)
+        {
+            ans.add(new ArrayList<>(path));
+            return;
+        }
+        if(i == candidates.length || sum > target)
+        {
+            return;
+        }
+        //选（一个或者多个）
+        int n = (target - sum) / candidates[i]; //第i个元素最多可以选n个
+        for(int j = 1; j <= n; j++)
+        {
+            path.add(candidates[i]);
+            sum += candidates[i];
+            dfs(path, i + 1, sum);
+        }
+        for(int j = 1; j <= n; j++) path.remove(path.size()-1); //回溯
+        //不选
+        dfs(path, i + 1, sum - n * candidates[i]);
+    }
+}
+```
