--- a/回溯 .md
+++ b/回溯 .md
@@ -279,3 +279,24 @@ class Solution {
     }
 }
 ```
+更简单的做法（推荐）：
+```
+public void dfs(List<Integer> path, int i, int sum)
+{
+    if(sum == target)
+    {
+        ans.add(new ArrayList<>(path));
+        return;
+    }
+    if(i == candidates.length || sum > target)
+    {
+        return;
+    }
+    //选
+    path.add(candidates[i]);
+    dfs(path, i, sum + candidates[i]); //i不要加1
+    path.remove(path.size()-1); //回溯
+    //不选
+    dfs(path, i + 1, sum);
+}
+```
