--- a/回溯 .md
+++ b/回溯 .md
@@ -300,3 +300,40 @@ public void dfs(List<Integer> path, int i, int sum)
     dfs(path, i + 1, sum);
 }
 ```
+
+# 代表性题目- 排列型
+
+## [1.全排列](https://leetcode.cn/problems/permutations/description/)
+思路：用一个boolean数组记录该元素是否已经被选过了。       
+代码：
+```
+class Solution {
+    int[] nums;
+    List<List<Integer>> ans = new ArrayList<>();
+    public List<List<Integer>> permute(int[] nums) {
+        this.nums = nums;
+        dfs(new ArrayList<>(), new boolean[nums.length]);
+        return ans;
+    }
+
+    public void dfs(List<Integer> path, boolean[] onPath)
+    {
+        if(path.size() == nums.length)
+        {
+            ans.add(new ArrayList<>(path));
+            return;
+        }
+        for(int i = 0; i < nums.length; i++)
+        {
+            if(!onPath[i])
+            {
+                path.add(nums[i]);
+                onPath[i] = true;
+                dfs(path, onPath);
+                onPath[i] = false; //回溯
+                path.remove(path.size()-1); //回溯
+            }
+        }
+    }
+}
+```
