--- a/回溯 .md
+++ b/回溯 .md
@@ -337,3 +337,53 @@ class Solution {
     }
 }
 ```
+
+## [2.N 皇后](https://leetcode.cn/problems/n-queens/description/)
+思路：dfs遍历每一行中，判断皇后放在哪一列（三个boolean数组判断（列，左上对角线，右上对角线））       
+代码：
+```
+class Solution {
+    int n;
+    boolean[] cols;
+    boolean[] diag1;
+    boolean[] diag2;
+    List<List<String>> ans = new ArrayList<>();
+
+    public List<List<String>> solveNQueens(int n) {
+        this.n = n;
+        this.cols = new boolean[n]; //列
+        this.diag1 = new boolean[2*n-1]; //diag1左上
+        this.diag2 = new boolean[2*n-1]; //diag2右上
+        dfs(new int[n], 0);
+        return ans;
+    }
+
+    public void dfs(int[] queens, int row) //行row的皇后的列位置为queens[row]
+    {
+        if(row == n)
+        {
+            List<String> temp = new ArrayList<>();
+            for(int i = 0; i < n; i++)
+            {
+                char[] array = new char[n]; // 创建一个长度为n的char数组
+                Arrays.fill(array, '.'); // 将所有元素设置为 '.'
+                array[queens[i]] = 'Q'; //某一列放置皇后
+                temp.add(new String(array));
+            }
+            ans.add(new ArrayList<>(temp));
+            return;
+        }
+        for(int col = 0; col < n; col++)
+        {
+            //在当前行中，判断该列是否可以放置皇后
+            if(!cols[col] && !diag1[row-col+(n-1)] && !diag2[row+col]) 
+            {
+                queens[row] = col; //直接覆盖，不用回溯
+                cols[col] = diag1[row-col+(n-1)] = diag2[row+col] = true;
+                dfs(queens, row+1);
+                cols[col] = diag1[row-col+(n-1)] = diag2[row+col] = false;//回溯
+            }
+        }
+    }
+}
+```
