--- a/回溯 .md
+++ b/回溯 .md
@@ -387,3 +387,36 @@ class Solution {
     }
 }
 ```
+
+## [3.N 皇后 II](https://leetcode.cn/problems/n-queens-ii/description/)
+思路：dfs遍历每一行中，判断皇后放在哪一列（三个boolean数组判断（列，左上对角线，右上对角线））       
+代码：
+```
+class Solution {
+    int ans = 0;
+    int n;
+    public int totalNQueens(int n) {
+        this.n = n;
+        dfs(0, new boolean[n], new boolean[2*n-1], new boolean[2*n-1]);
+        return ans;
+    }
+
+    public void dfs(int row, boolean[] cols, boolean[] diag1, boolean[] diag2)
+    {
+        if(row == n)
+        {
+            ans++;
+            return;
+        }
+        for(int col = 0; col < n; col++)
+        {
+            if(!cols[col] && !diag1[row-col+(n-1)] && !diag2[row+col])
+            {
+                cols[col] = diag1[row-col+(n-1)] = diag2[row+col] = true;
+                dfs(row+1, cols, diag1, diag2);
+                cols[col] = diag1[row-col+(n-1)] = diag2[row+col] = false;
+            }
+        }
+    }
+}
+```
