--- a/回溯 .md
+++ b/回溯 .md
@@ -420,3 +420,68 @@ class Solution {
     }
 }
 ```
+
+## [4.将石头分散到网格图的最少移动次数](https://leetcode.cn/problems/minimum-moves-to-spread-stones-over-grid/description/)
+思路：  
+![image](https://github.com/user-attachments/assets/a860595a-bd22-4285-bf3e-f75f28a7035e)
+
+代码：
+```
+class Solution {
+    List<int[]> from = new ArrayList<>();
+    List<int[]> to = new ArrayList<>();
+    int min_ans = Integer.MAX_VALUE;
+
+    public int minimumMoves(int[][] grid) {
+        //存放from和to数组
+        for(int i = 0; i < 3; i++)
+        {
+            for(int j = 0; j < 3; j++)
+            {
+                if(grid[i][j] == 0)
+                    to.add(new int[]{i, j});
+                if(grid[i][j] > 1)
+                {
+                    int n = grid[i][j] - 1;
+                    while(n > 0)
+                    {
+                        from.add(new int[]{i, j});
+                        n--;
+                    }
+                }
+            }
+        }
+        //全排列to数组，和from数组计算得到最小值
+        dfs(new ArrayList<>(), new boolean[to.size()]);
+        return min_ans;
+    }
+
+    public int distance(List<int[]> node1, List<int[]> node2)
+    {
+        int dist = 0;
+        for(int i = 0; i < node1.size(); i++)
+            dist += Math.abs(node1.get(i)[0] - node2.get(i)[0]) + Math.abs(node1.get(i)[1] - node2.get(i)[1]);
+        return dist;
+    }
+
+    public void dfs(List<int[]> path, boolean[] onPath)
+    {
+        if(path.size() == to.size())
+        {
+            min_ans = Math.min(min_ans, distance(path, from));
+            return;
+        }
+        for(int i = 0; i < to.size(); i++)
+        {
+            if(!onPath[i])
+            {
+                onPath[i] = true;
+                path.add(to.get(i));
+                dfs(path, onPath);
+                path.remove(path.size()-1);
+                onPath[i] = false;
+            }
+        }
+    }
+}
+```
