Update 动态规划 - 从记忆化搜索到递推.md

--- a/动态规划 - 从记忆化搜索到递推.md
+++ b/动态规划 - 从记忆化搜索到递推.md
@@ -1,1 +1,6 @@
+## [1.验证二叉搜索树](https://leetcode.cn/problems/validate-binary-search-tree/)
 
+### 方法一（前序遍历）
+思路：每次维护一个开区间，判断当前节点值是否在该区间内。   
+代码：
+```
