Update 动态规划 - 从记忆化搜索到递推.md

--- a/动态规划 - 从记忆化搜索到递推.md
+++ b/动态规划 - 从记忆化搜索到递推.md
@@ -1,6 +1,19 @@
-## [1.验证二叉搜索树](https://leetcode.cn/problems/validate-binary-search-tree/)
+# 代表性题目
 
-### 方法一（前序遍历）
-思路：每次维护一个开区间，判断当前节点值是否在该区间内。   
+## [1.打家劫舍](https://leetcode.cn/problems/house-robber/description/)
+
+### 方法一（递推）
+思路：选或者不选。前i号房屋的最高金额 = max(选：前i-2号房屋的最高金额+i号房屋的金额，不选：前i-1号房屋的最高金额)，得到dp递推公式。   
 代码：
+```
+class Solution {
+    public int rob(int[] nums) {
+        int[] dp = new int[nums.length+1]; //表示前i号房屋的最高金额
+        dp[0] = 0;
+        dp[1] = nums[0];
+        for(int i = 2; i <= nums.length; i++)
+            dp[i] = Math.max(dp[i-1], dp[i-2]+nums[i-1]); //不选和选
+        return dp[nums.length];
+    }
+}
 ```
