Update 动态规划 - 从记忆化搜索到递推.md

--- a/动态规划 - 从记忆化搜索到递推.md
+++ b/动态规划 - 从记忆化搜索到递推.md
@@ -20,3 +20,20 @@ class Solution {
 
 ### 方法二（递推+滚动数组优化空间）
 思路：其实就是用三个变量，一个保存上上个元素，一个保存上个元素，最后一个保存当前元素。
+
+
+## [2.爬楼梯](https://leetcode.cn/problems/climbing-stairs/description/)
+思路：台阶i方法数=台阶i-1方法数（再爬一个台阶）+台阶i-2方法数（再爬二个台阶）     
+代码：
+```
+class Solution {
+    public int climbStairs(int n) {
+        int[] dp = new int[n+1]; //dp[i]表示当前i阶楼梯有多少种方法
+        dp[0] = 1; //初始化
+        dp[1] = 1;
+        for(int i = 2; i <= n; i++)
+            dp[i] = dp[i-1] + dp[i-2]; //台阶i方法数=台阶i-1方法数（再爬一个台阶）+台阶i-2方法数（再爬二个台阶）
+        return dp[n];
+    }
+}
+```
