--- a/动态规划 - 从记忆化搜索到递推.md
+++ b/动态规划 - 从记忆化搜索到递推.md
@@ -37,3 +37,19 @@ class Solution {
     }
 }
 ```
+
+## [3.使用最小花费爬楼梯](https://leetcode.cn/problems/min-cost-climbing-stairs/description/)
+思路：到达台阶i的最低消费=min(到达台阶i-1的最低消费（再爬一个台阶）+第i-1个台阶向上爬需要支付的费用，到达台阶i-2的最低消费（再爬二个台阶）+第i-2个台阶向上爬需要支付的费用)     
+代码：
+```
+class Solution {
+    public int minCostClimbingStairs(int[] cost) {
+        int n = cost.length;
+        int[] dp = new int[n+1];
+        dp[0] = dp[1] = 0;
+        for(int i = 2; i <= n; i++)
+            dp[i] = Math.min(dp[i-1] + cost[i-1], dp[i-2] + cost[i-2]);
+        return dp[n];
+    }
+}
+```
