Update 动态规划 - 从记忆化搜索到递推.md

--- a/动态规划 - 从记忆化搜索到递推.md
+++ b/动态规划 - 从记忆化搜索到递推.md
@@ -53,3 +53,24 @@ class Solution {
     }
 }
 ```
+
+## [4.组合总和 Ⅳ](https://leetcode.cn/problems/combination-sum-iv/description/)
+思路：思想和[2.爬楼梯](https://leetcode.cn/problems/climbing-stairs/description/)一样。可以爬的台阶数从1或者2变为整个nums数组中的数。     
+代码：
+```
+class Solution {
+    public int combinationSum4(int[] nums, int target) {
+        int[] dp = new int[target+1];
+        dp[0] = 1;
+        for(int i = 1; i <= target; i++)
+        {
+            for(int x: nums)
+            {
+                if(i - x >= 0)
+                    dp[i] += dp[i-x];
+            }
+        }
+        return dp[target];
+    }
+}
+```
