--- a/动态规划 - 从记忆化搜索到递推.md
+++ b/动态规划 - 从记忆化搜索到递推.md
@@ -74,3 +74,27 @@ class Solution {
     }
 }
 ```
+
+## [5.统计构造好字符串的方案数](https://leetcode.cn/problems/count-ways-to-build-good-strings/description/)
+思路：dp[i]表示长度为i有几个好字符串，默认值为0。dp[i] = dp[i-zero] + dp[i-one]。    
+代码：
+```
+class Solution {
+    public int countGoodStrings(int low, int high, int zero, int one) {
+        final int MOD = (int)(1e9 + 7);
+        int[] dp = new int[high+1];  //dp[i]表示长度为i有几个好字符串，默认值为0
+        dp[0] = 1; //初始化
+        for(int i = 1; i <= high; i++)
+        {
+            if(i - zero >= 0)
+                dp[i] = (dp[i] + dp[i-zero]) % MOD;
+            if(i - one >= 0)
+                dp[i] = (dp[i] + dp[i-one]) % MOD;
+        }
+        int ans = 0;
+        for(int i = low; i <= high; i++)
+            ans = (ans + dp[i]) % MOD; //取模防止溢出
+        return ans;
+    }
+}
+```
