Update 动态规划 - 从记忆化搜索到递推.md

--- a/动态规划 - 从记忆化搜索到递推.md
+++ b/动态规划 - 从记忆化搜索到递推.md
@@ -76,7 +76,7 @@ class Solution {
 ```
 
 ## [5.统计构造好字符串的方案数](https://leetcode.cn/problems/count-ways-to-build-good-strings/description/)
-思路：dp[i]表示长度为i有几个好字符串，默认值为0。dp[i] = dp[i-zero] + dp[i-one]。    
+思路：思想和[2.爬楼梯](https://leetcode.cn/problems/climbing-stairs/description/)一样。dp[i]表示长度为i有几个好字符串。dp[i] = dp[i-zero] + dp[i-one]。  
 代码：
 ```
 class Solution {
@@ -95,6 +95,48 @@ class Solution {
         for(int i = low; i <= high; i++)
             ans = (ans + dp[i]) % MOD; //取模防止溢出
         return ans;
+    }
+}
+```
+
+## [6.统计打字方案数](https://leetcode.cn/problems/count-number-of-texts/description/)
+思路：对于各个由相同字符组成的字符串分组，思想和[2.爬楼梯](https://leetcode.cn/problems/climbing-stairs/description/)一样。最后使用乘法定理计算即可。   
+代码：
+```
+class Solution {
+    public int countTexts(String pressedKeys) {
+        int n = pressedKeys.length();
+        int MOD = (int)1e9+7;
+        //对于相同字符组成的字符串，计算不同长度下可能的文字信息总数
+        //对于相同字符组成的字符串，dp[i]表示前i个字符可能的文字信息总数
+        long[] dp1 = new long[Math.max(5, n+1)]; //对于数字7和数字9，得使用long!!!
+        long[] dp2 = new long[Math.max(5, n+1)]; //对于其他数字，得使用long!!!
+        dp1[0] = dp2[0] = 1;
+        dp1[1] = dp2[1] = 1;
+        dp1[2] = dp2[2] = 2;
+        dp1[3] = dp2[3] = 4;
+        for(int i = 4; i <= n; i++)
+        {
+            dp1[i] = (dp1[i-1] + dp1[i-2] + dp1[i-3] + dp1[i-4]) % MOD;
+            dp2[i] = (dp2[i-1] + dp2[i-2] + dp2[i-3]) % MOD;
+        }
+        //找出字符串各个相同字符分组，运用乘法原理，计算得到最终结果
+        long ans = 1; //得使用long!!!
+        int num = 0; //统计相同字符分组的个数
+        for(int i = 0; i < n; i++)
+        {
+            char c = pressedKeys.charAt(i);
+            num++;
+            if(i == n-1 || c != pressedKeys.charAt(i+1)) //表示i指向相同字符分组的最后一个
+            {
+                if(c == '7' || c == '9')
+                    ans = (ans * dp1[num]) % MOD;
+                else
+                    ans = (ans * dp2[num]) % MOD;
+                num = 0; //清零
+            }
+        }
+        return (int)ans;
     }
 }
 ```
