Update 动态规划 - 从记忆化搜索到递推.md

--- a/动态规划 - 从记忆化搜索到递推.md
+++ b/动态规划 - 从记忆化搜索到递推.md
@@ -140,3 +140,34 @@ class Solution {
     }
 }
 ```
+
+## [7.打家劫舍 II](https://leetcode.cn/problems/house-robber-ii/description/)
+思路：分类讨论，选1号房屋，则不能选2号屋和n号屋，考虑3号房屋到n-1号房屋(非环形)；不选1号房屋，则考虑2号房屋到n号房屋(非环形)   
+代码：
+```
+class Solution {
+    public int rob(int[] nums) {
+        int n = nums.length;
+
+        //选1号房屋，则不能选2号屋和n号屋，考虑3号房屋到n-1号房屋(非环形)
+        //不选1号房屋，则考虑2号房屋到n号房屋(非环形)
+        return Math.max(nums[0] + func(nums, 3, n-1), func(nums, 2, n));
+    }
+
+    public int func(int[] nums, int start, int end)
+    {
+        if(start > end)
+            return 0;
+        int f1 = 0;
+        int f2 = nums[start-1];
+        int dp = f2;
+        for(int i = start + 1; i <= end; i++)
+        {
+            dp = Math.max(f1 + nums[i-1], f2); //选或者不选
+            f1 = f2;
+            f2 = dp;
+        }
+        return dp;
+    }
+}
+```
