--- a/动态规划 - 从记忆化搜索到递推.md
+++ b/动态规划 - 从记忆化搜索到递推.md
@@ -171,3 +171,20 @@ class Solution {
     }
 }
 ```
+
+## [8.珠宝的最高价值](https://leetcode.cn/problems/li-wu-de-zui-da-jie-zhi-lcof/description/)
+思路：dp[i][j]表示到左上角到当前位置的最高珠宝价值。则dp[i][j] = 当前珠宝价值 + max(dp[i][j-1], dp[i-1][j])  
+代码：
+```
+class Solution {
+    public int jewelleryValue(int[][] frame) {
+        int row = frame.length;
+        int col = frame[0].length;
+        int[][] dp = new int[row+1][col+1];
+        for(int i = 1; i <= row; i++)
+            for(int j = 1; j <= col; j++)
+                dp[i][j] = Math.max(dp[i-1][j], dp[i][j-1]) + frame[i-1][j-1];
+        return dp[row][col];
+    }
+}
+```
