--- a/0-1 背包 完全背包 至多，恰好，至少.md
+++ b/0-1 背包 完全背包 至多，恰好，至少.md
@@ -34,8 +34,50 @@ public static int solution(int n, int[] weights, int[] values, int m) {
 
 ```
 
-## [1.]()
-思路： 
+## [1.目标和](https://leetcode.cn/problems/target-sum/description/)
+思路： 详见代码注释（两种做法）
 代码：
 ```
+class Solution {
+    public int findTargetSumWays(int[] nums, int target) {
+        int n = nums.length;
+        //转换问题
+        int sum = 0;
+        for(int x : nums) sum += x; //求所有数的和(恒为正数)
+        //假设前面为'+'的数和为p，则'-'的数的和为-(sum-p)
+        //所以 p-(sum-p)=target，得到p=(target+sum)/2
+        //问题转换为：从这些数取某些值，使得其刚好等于(target+sum)/2
+        int s = target + sum;
+        //特殊情况判断
+        if(s < 0 || s % 2 == 1)
+            return 0;
+        //通常情况（二维数组）
+        // int new_target = s / 2;
+        // int[][] dp = new int[n+1][new_target+1];//考虑前i个数，和为j的方案数
+        // dp[0][0] = 1; //初始化（0个数和为0的方案数为1）
+        // for(int i = 1; i <= n; i++)
+        // {
+        //     for(int j = 0; j <= new_target; j++) //要考虑和为0
+        //     {
+        //         if(nums[i-1] > j)
+        //             dp[i][j] = dp[i-1][j];
+        //         else
+        //             dp[i][j] = dp[i-1][j] + dp[i-1][j-nums[i-1]];
+        //     }
+        // }
+        // return dp[n][new_target];
+        //通常情况（一维数组）
+        int new_target = s / 2;
+        int[] dp = new int[new_target+1];
+        dp[0] = 1; //初始化
+        for(int i = 1; i <= n; i++)
+        {
+            for(int j = new_target; j >= nums[i-1]; j--) 
+            {
+                dp[j] = dp[j] + dp[j-nums[i-1]];
+            }
+        }
+        return dp[new_target];
+    }
+}
 ```
