Update 0-1 背包 完全背包 至多，恰好，至少.md

--- a/0-1 背包 完全背包 至多，恰好，至少.md
+++ b/0-1 背包 完全背包 至多，恰好，至少.md
@@ -29,9 +29,15 @@ public static int solution(int n, int[] weights, int[] values, int m) {
 ### 注意事项
 1. 
 
-### 完全背包问题模板代码
+### 完全背包问题模板代码（[题解以及思路](https://www.acwing.com/solution/content/5345/)）
 ```
+状态转移方程为：
+f[i][j]=max(f[i,j-v]+w , f[i-1][j])
 
+//一维数组模板
+for(int i = 1; i <= n; i++)
+    for(int j = weights[i-1]; j <= m; j++) // 0-1背包是逆序，完全背包是正序
+        dp[j] = Math.max(dp[j], dp[j-weights[i-1]]+values[i-1]); 
 ```
 
 ## [1.目标和](https://leetcode.cn/problems/target-sum/description/)
