--- a/0-1 背包 完全背包 至多，恰好，至少.md
+++ b/0-1 背包 完全背包 至多，恰好，至少.md
@@ -84,3 +84,23 @@ class Solution {
     }
 }
 ```
+
+## [2.零钱兑换](https://leetcode.cn/problems/coin-change/description/)
+思路：状态转移方程：f[i][j] = min(f[i-1][j], f[i][j-val]+1)   
+代码：
+```
+class Solution {
+    public int coinChange(int[] coins, int amount) {
+        //状态转移方程：f[i][j] = min(f[i-1][j], f[i][j-val]+1)
+        int n = coins.length;
+        int[] dp = new int[amount+1];
+        int MAX = amount + 1;//最大硬币个数
+        Arrays.fill(dp, MAX);//初始化
+        dp[0] = 0;//金额为0需要0个硬币
+        for(int i = 1; i <= n; i++)
+            for(int j = coins[i-1]; j <= amount; j++)
+                dp[j] = Math.min(dp[j], dp[j-coins[i-1]]+1);
+        return dp[amount] > amount? -1 : dp[amount];
+    }
+}
+```
