--- a/0-1 背包 完全背包 至多，恰好，至少.md
+++ b/0-1 背包 完全背包 至多，恰好，至少.md
@@ -86,7 +86,7 @@ class Solution {
 ```
 
 ## [2.零钱兑换](https://leetcode.cn/problems/coin-change/description/)
-思路：状态转移方程：f[i][j] = min(f[i-1][j], f[i][j-val]+1)   
+思路：状态转移方程：f[i][j] = min(f[i-1][j], f[i][j-val]+1)，套用完全背包一维模板。   
 代码：
 ```
 class Solution {
@@ -101,6 +101,25 @@ class Solution {
             for(int j = coins[i-1]; j <= amount; j++)
                 dp[j] = Math.min(dp[j], dp[j-coins[i-1]]+1);
         return dp[amount] > amount? -1 : dp[amount];
+    }
+}
+```
+
+## [3.和为目标值的最长子序列的长度](https://leetcode.cn/problems/length-of-the-longest-subsequence-that-sums-to-target/description/)
+思路：状态转移方程 dp[i][j] = max(dp[i-1][j], dp[i-1][j-val]+1)，套用0-1背包一维模板。   
+代码：
+```
+class Solution {
+    public int lengthOfLongestSubsequence(List<Integer> nums, int target) {
+        //状态转移方程 dp[i][j] = max(dp[i-1][j], dp[i-1][j-val]+1)
+        int n = nums.size();
+        int[] dp = new int[target+1];
+        Arrays.fill(dp, -1001);
+        dp[0] = 0;
+        for(int i = 1; i <= n; i++)
+            for(int j = target; j >= nums.get(i-1); j--)
+                dp[j] = Math.max(dp[j], dp[j-nums.get(i-1)]+1);
+        return dp[target] <= 0? -1 : dp[target];
     }
 }
 ```
