Update 0-1 背包 完全背包 至多，恰好，至少.md

--- a/0-1 背包 完全背包 至多，恰好，至少.md
+++ b/0-1 背包 完全背包 至多，恰好，至少.md
@@ -123,3 +123,32 @@ class Solution {
     }
 }
 ```
+
+## [4.分割等和子集](https://leetcode.cn/problems/partition-equal-subset-sum/description/)
+思路：问题转换为从数组nums选择一些数，使得其和恰好为sum/2。0-1背包问题，状态转移方程为:dp[i][j] = dp[i-1][j] || dp[i-1][j-val]。     
+代码：
+```
+class Solution {
+    public boolean canPartition(int[] nums) {
+        int n = nums.length;
+        int sum = 0;
+        for(int x: nums)
+            sum += x;
+        //问题转换为：从数组nums选择一些数，使得其和恰好为sum/2。0-1背包问题
+        if(sum % 2 == 1) return false; //总和为奇数，肯定无法分割成两个等和的子集
+        int target = sum / 2;
+        //状态转移方程为:dp[i][j] = dp[i-1][j] || dp[i-1][j-val]
+        boolean[] dp = new boolean[target+1];
+        dp[0] = true; //初始化
+        for(int i = 1; i <= n; i++)
+        {
+            for(int j = target; j >= nums[i-1]; j--)
+            {
+                dp[j] = dp[j] || dp[j-nums[i-1]];
+            }
+            if(dp[target]) return true; //加多这一行，提前判断是否找到满足sum/2的子集
+        }
+        return false;
+    }
+}
+```
