Update 0-1 背包 完全背包 至多，恰好，至少.md

--- a/0-1 背包 完全背包 至多，恰好，至少.md
+++ b/0-1 背包 完全背包 至多，恰好，至少.md
@@ -152,3 +152,21 @@ class Solution {
     }
 }
 ```
+
+## [5.零钱兑换 II](https://leetcode.cn/problems/coin-change-ii/description/)
+思路：状态转移方程 dp[i][j] = dp[i-1][j] + dp[i][j-val]，套用完全背包一维模板。   
+代码：
+```
+class Solution {
+    public int change(int amount, int[] coins) {
+        //状态转移方程 dp[i][j] = dp[i-1][j] + dp[i][j-val]
+        int n = coins.length;
+        int[] dp = new int[amount+1];
+        dp[0] = 1; //初始化
+        for(int i = 1; i <= n; i++)
+            for(int j = coins[i-1]; j <= amount; j++)
+                dp[j] = dp[j] + dp[j-coins[i-1]];
+        return dp[amount];
+    }
+}
+```
