Update 0-1 背包 完全背包 至多，恰好，至少.md

--- a/0-1 背包 完全背包 至多，恰好，至少.md
+++ b/0-1 背包 完全背包 至多，恰好，至少.md
@@ -170,3 +170,23 @@ class Solution {
     }
 }
 ```
+
+## [6.完全平方数](https://leetcode.cn/problems/perfect-squares/description/)
+思路：状态转移方程 dp[i][j] = min(dp[i-1][j], dp[i][j-i*i]+1)，套用完全背包一维模板。   
+代码：
+```
+class Solution {
+    public int numSquares(int n) {
+        //状态转移方程 dp[i][j] = min(dp[i-1][j], dp[i][j-i*i]+1)
+        int x = (int)Math.floor(Math.sqrt(n)); //得到小于等于n的最大完全平方数的开方
+        int MAX = 10001; //完全平方数的最大可能数量+1
+        int[] dp = new int[n+1];
+        Arrays.fill(dp, MAX); //初始化
+        dp[0] = 0; //初始化
+        for(int i = 1; i <= x; i++)
+            for(int j = i*i; j <= n; j++)
+                dp[j] = Math.min(dp[j], dp[j-i*i]+1);
+        return dp[n];
+    }
+}
+```
